Fixed up top bar spacing and added in email

--- a/src/app/topbar/topbar.component.scss
+++ b/src/app/topbar/topbar.component.scss
@@ -7,6 +7,7 @@
     margin-left: 1rem;
     padding-top: 0.3rem;
     padding-bottom: 0.4em;
+    margin-bottom: 1em;
 }
 
 #top {
